2006-07-10  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/sci_cb.c: Autocompletion only works on blank lines.


2006-07-09  Enrico Tröger  <enrico.troeger@uvena.de>

 * tagmanager/d.c, tagmanager/Makefile.am, tagmanager/parsers.h,
   src/filetypes.c, src/highlighting.c, src/utils.c, src/build.c,
   src/templates.c, data/filetypes.d:
   Added new filetype D(patch by Christop Berg, thanks).


2006-07-08  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keyfile.c: Fix saving the terminal tool on quitting.
 * src/keyfile.c, src/main.c:
   Improve switching out of fullscreen after startup.


2006-07-08  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/encodings.c: Made encoding descriptions translatable.
 * src/notebook.c:
   Compile notebook_motion_notify_event_cb() only with GTK 2.6.


2006-07-07  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/prefs.c: Fixed bug when saving VTE settings.
 * src/keybindings.c, src/utils.c, src/callbacks.c, src/geany.h,
   src/prefs.c, src/keyfile.c:
   Improved behaviour of toggle sidebar after a restart.
   Introduced new flag sidebar_visible, renamed configuration keys.


2006-07-06  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keybindings.c, src/keybindings.h, src/dialogs.c:
   Add keybinding for Make object, update Make descriptions.


2006-07-05  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/sciwrappers.c: Make sci_goto_line_scroll work better with
                      line wrapping and folding.
 * src/callbacks.c, src/dialogs.c:
   Add Make object command to compile the current file.
   Added some separators and renamed Build with make items.


2006-07-03  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.c, src/dialogs.c:
   Fix a problem with the recent files menu.
 * src/utils.c, src/sciwrappers.c, src/sciwrappers.h:
   Scroll to 1/4 of visible lines when going to a line number.


2006-07-03  Enrico Tröger  <enrico.troeger@uvena.de>
